syntax = "proto3";

package protobuf.bean;
import "google/protobuf/any.proto";


message PageResult {
    int32 status = 1;
    string msg = 2;
    google.protobuf.Any data = 3;
}