syntax = "proto3";


//生成文件所在包名
//option java_package = "protobuf.bean";
//生成的java文件名
//option java_outer_classname = "SearchRequest";

message SearchRequest {
    string query = 1;
    int32 page_number = 2;
    int32 result_per_page = 3;
}